INT-8129: recent updates css fix
remove col count which breaks at the moment….

--- a/less/bootswatch/snap-core.less
+++ b/less/bootswatch/snap-core.less
@@ -620,7 +620,7 @@ input[type="text"]+input[type="submit"] {
     .clearfix();
     margin-bottom:1em;
     // media o can be a link
-    >a {
+    a {
         text-decoration:none;
     }
     // media o media
@@ -676,13 +676,6 @@ input[type="text"]+input[type="submit"] {
     }
 }
 
-.callstoaction {
-    .snap-media-object {
-        .snap-media-body {
-            overflow: visible;
-        }
-    }
-}
 
 // Fixy - the hipster box with a brand colour that covers everything else, use with care!
 // -------------------------
